Working on clock

--- a/clock.html
+++ b/clock.html
@@ -3,14 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Clock</title>
 </head>
 <body>
     <div id="time">
-        <div class="circle">
+        <div class="circle" style="--clr:#ff2972;">
             <div class="dots sec_dot"></div>
             <svg>
                 <circle cx="120" cy="120" r="120" id="ss">
+
+                </circle>
+            </svg>
+        </div>
+        <div class="circle" style="--clr:#fee800;">
+            <div class="dots min_dot"></div>
+            <svg>
+                <circle cx="100" cy="100" r="100" id="ss">
+
+                </circle>
+            </svg>
+        </div>
+        <div class="circle" style="--clr:#04f043;">
+            <div class="dots hr_dot"></div>
+            <svg>
+                <circle cx="80" cy="80" r="80" id="ss">
 
                 </circle>
             </svg>
