--- a/clock.html
+++ b/clock.html
@@ -36,4 +36,9 @@
         </div>
     </section>
 </body>
+<script>
+    let hh = document.getElementById('hh');
+    let mm = document.getElementById('mm');
+    let ss = document.getElementById('ss');
+</script>
 </html>
