--- a/clock.html
+++ b/clock.html
@@ -20,7 +20,7 @@
             <div class="circle" style="--clr:#fee800;">
                 <div class="dots min_dot"></div>
                 <svg>
-                    <circle cx="100" cy="100" r="100" id="ss">
+                    <circle cx="100" cy="100" r="100" id="mm">
     
                     </circle>
                 </svg>
@@ -28,17 +28,13 @@
             <div class="circle" style="--clr:#04f043;">
                 <div class="dots hr_dot"></div>
                 <svg>
-                    <circle cx="80" cy="80" r="80" id="ss">
+                    <circle cx="80" cy="80" r="80" id="hh">
     
                     </circle>
                 </svg>
             </div>
         </div>
     </section>
+    <script src="js/script.js"></script>
 </body>
-<script>
-    let hh = document.getElementById('hh');
-    let mm = document.getElementById('mm');
-    let ss = document.getElementById('ss');
-</script>
 </html>
