Added time display div

--- a/clock.html
+++ b/clock.html
@@ -33,6 +33,14 @@
                     </circle>
                 </svg>
             </div>
+            <div class="timeBx">
+                <div id="hours" style="--clr:#04f043;">00</div>
+                <div id="minutes" style="--clr:#fee800;">00</div>
+                <div id="seconds" style="--clr:#ff2972;">00</div>
+                <div class="ap" style="--clr:#fff;">
+                    <div id="ampm">AM</div>
+                </div>
+            </div>
         </div>
     </section>
     <script src="js/script.js"></script>
